--- a/css/home.css
+++ b/css/home.css
@@ -65,6 +65,7 @@ header {
 }
 
 #display .item .sentence {
+  width: 100%;
   margin-left: 8px;
 }
 
@@ -91,6 +92,17 @@ header {
   border-radius: 50%;
   border: 1px solid white;
   background-color: white;
+}
+
+#display .item a {
+  background-color: rgb(32, 176, 224);
+  color: white;
+  padding: 3px;
+  border-radius: 4px;
+  box-shadow: 0 3px gray;
+  display: inline-block;
+  margin-left: 80%;
+  font-size: 14px;
 }
 
 
