--- a/css/home.css
+++ b/css/home.css
@@ -26,7 +26,7 @@ body {
 
 /* ヘッダー */
 header {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   width: 85%;
@@ -117,7 +117,7 @@ header {
 
 /* ツイート画面表示ボタン */
 #formBtn {
-  position: absolute;
+  position: fixed;
   bottom: 20px;
   right: 38%;
 }
