--- a/css/home_tweet.css
+++ b/css/home_tweet.css
@@ -77,9 +77,8 @@
   padding: 4px;
 }
 
-
 /* 返信機能 */
-#display {
+#replyTweet {
   width: 100%;
   height: 100%;
   padding-top: 50px;
@@ -92,7 +91,7 @@
   align-items: center;
 }
 
-#display .item {
+#replyTweet .item {
   display: flex;
   justify-content: left;
   width: 80%;
@@ -100,28 +99,28 @@
   border-bottom: .5px solid gray;
 }
 
-#display .item .sentence {
+#replyTweet .item .sentence {
   width: 100%;
   margin-left: 8px;
 }
 
-#display .item .who {
+#replyTweet .item .who {
   display: flex;
   align-items: center;
   margin-bottom: 5px;
 }
 
-#display .item .username {
+#replyTweet .item .username {
   color: white;
   font-weight: bold;
 }
 
-#display .item .tweetTime {
+#replyTweet .item .tweetTime {
   font-size: small;
   color: rgb(87, 86, 86);
 }
 
-#display .item img {
+#replyTweet .item img {
   width: 40px;
   height: 40px;
   object-fit: cover;
