--- a/css/mypage.css
+++ b/css/mypage.css
@@ -54,6 +54,7 @@ header {
   height: 150px;
   border: 1px solid gray;
   border-radius: 50%;
+  object-fit: cover;
 }
 
 .userInfo {
@@ -88,13 +89,12 @@ header {
   display: none;
   position: absolute;
   top: 250px;
-  left: 46%;
+  left: 47%;
   border: 1px solid gray;
   border-radius: 4px;
   font-size: 12px;
   padding: 3px;
 }
-
 
 
 /* ツイート画面表示ボタン */
