--- a/css/tweet.css
+++ b/css/tweet.css
@@ -56,7 +56,7 @@
   border-radius: 4px;
   box-shadow: 0 3px gray;
   display: inline-block;
-  margin-left: 80%;
+  margin-left: 10px;
 }
 
 /* 返信部分 */
@@ -109,4 +109,9 @@
   border-radius: 50%;
   border: 1px solid white;
   background-color: white;
+}
+
+.flex {
+  display: flex;
+  justify-content: end;
 }
