--- a/css/search.css
+++ b/css/search.css
@@ -1,3 +1,23 @@
+/* ホームに戻るボタン */
+#homeBack {
+  position: fixed;
+  display: inline-block;
+  width: 100px;
+  line-height: 50px;
+  text-align: center;
+  top: 0;
+  left: 50px;
+  z-index: 1;
+  transition: .5s;
+  border-radius: 4px;
+}
+
+#homeBack:hover {
+  background-color: #68a4d9;
+  transition: .5s;
+}
+
+
 /* フォーム */
 #searchForm {
   height: 50px;
@@ -10,6 +30,12 @@
   margin: 0 5px;
   border: 1px solid gray;
   border-radius: 4px;
+}
+
+header {
+  height: 50px;
+  text-align: center;
+  line-height: 50px;
 }
 
 
